<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUser">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="310dp"
        android:layout_height="215dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/SocialMedia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/insta" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginLeft="16dp"
        android:textColor="#2357aa"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="265dp"
        android:layout_height="41dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/EnterYourUsername"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="67dp"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="#2357aa"
        android:paddingTop="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/NewUserEmail"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/EnterYourEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/UserName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:paddingTop="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/password"
        android:textColor="#2357aa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/NewUserPassword"
        android:layout_width="267dp"
        android:layout_height="41dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/EnterYourPassword"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/NewUserEmail" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="62dp"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:paddingTop="13dp"
        android:layout_marginTop="20dp"
        android:text="@string/Mobile"
        android:textColor="#2357aa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/NewUserMobile"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/EnterMobile"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/NewUserPassword" />

    <Button
        android:id="@+id/GetStarted"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:background="#2357aa"
        android:onClick="started"
        android:text="@string/GetStarted"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewUserMobile" />

    <Button
        android:id="@+id/button3"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:background="#2357aa"
        android:onClick="login"
        android:text="@string/HaveAccount"
        android:textColor="#ffffff"
        app:layout_constraintStart_toEndOf="@+id/GetStarted"
        app:layout_constraintTop_toBottomOf="@+id/NewUserMobile" />
</android.support.constraint.ConstraintLayout>